package NonGui.BaseEntity.Properties;

public enum UnitClass {
    Assassin,
    Fighter,
    Mage,
    Maskman,
    Support,
    Tank
}
