package NonGui.BaseEntity.Properties;

public interface haveClass {
    public UnitClass getUnitClass();
    public void setUnitClass(UnitClass unitClass);
}
